<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detalhe.DetalheItemAnimalFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivItemAnimais"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_200_dp"
            android:scaleType="center"
            android:src="@drawable/hylobates_syndactylus"
            android:contentDescription="@string/imagem_de_animal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvItemTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20dp"
            android:text="@string/titulo_tipo_de_animais"
            android:textColor="@color/black"
            android:textSize="@dimen/size_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivItemAnimais" />

        <ImageView
            android:layout_width="@dimen/size_40dp"
            android:layout_height="@dimen/size_40dp"
            android:layout_marginTop="@dimen/size_20dp"
            android:layout_marginEnd="@dimen/size_20dp"
            android:contentDescription="@string/icone_de_coracao_sem_cor"
            android:foregroundGravity="right"
            android:src="@drawable/icon_notfavorite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivItemAnimais" />

        <TextView
            android:id="@+id/tvItemTipoDeAnimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20dp"
            android:text="@string/tipo_de_animal"
            android:textColor="@color/black"
            android:textSize="@dimen/size_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvItemTitle" />

        <TextView
            android:id="@+id/tvItemTempoAtivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20dp"
            android:text="@string/tempo_ativo"
            android:textColor="@color/black"
            android:textSize="@dimen/size_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvItemTipoDeAnimal" />

        <TextView
            android:id="@+id/tvComprimentoMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20dp"
            android:text="@string/comprimento_minimo"
            android:textColor="@color/black"
            android:textSize="@dimen/size_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvItemTempoAtivo" />

        <TextView
            android:id="@+id/tvComprimentoMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20dp"
            android:text="@string/comprimento_maximo"
            android:textColor="@color/black"
            android:textSize="@dimen/size_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvComprimentoMin" />

        <TextView
            android:id="@+id/tvPesoMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20dp"
            android:text="@string/peso_minimo"
            android:textColor="@color/black"
            android:textSize="@dimen/size_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvComprimentoMax" />

        <TextView
            android:id="@+id/tvPesoMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20dp"
            android:text="@string/peso_maximo"
            android:textColor="@color/black"
            android:textSize="@dimen/size_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPesoMin" />

        <TextView
            android:id="@+id/tvVidaUtil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20dp"
            android:text="vida util"
            android:textColor="@color/black"
            android:textSize="@dimen/size_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPesoMax" />
        <TextView
            android:id="@+id/tvHabitat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20dp"
            android:text="@string/habitat"
            android:textColor="@color/black"
            android:textSize="@dimen/size_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvVidaUtil" />

        <TextView
            android:id="@+id/tvDieta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20dp"
            android:text="@string/dieta"
            android:textColor="@color/black"
            android:textSize="@dimen/size_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHabitat" />

        <TextView
            android:id="@+id/tvFaixaGeografia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20dp"
            android:text="@string/faixa_geografia"
            android:textColor="@color/black"
            android:textSize="@dimen/size_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDieta" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>